Wrap all post content in special class for CSS
Wrap the summary and content of articles and pages in a
<div class='inner-content'>, so it can be selectively styled via CSS.

--- a/templates/article.html
+++ b/templates/article.html
@@ -85,7 +85,7 @@
                         {% include "includes/article_info.html" %}
                     </div>
                 </div>
-                {{ article.content }}
+                <div class="inner-content">{{ article.content }}</div>
             </div>
             <!-- /.entry-content -->
             {% include 'includes/related-posts.html' %}
