--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -24,11 +24,26 @@
             </li>
         {% endif %}
 
+        {% if DISPLAY_PAGES_ON_SIDEBAR %}
+            <li class="list-group-item">
+            <h4><i class="fa  fa-file-text-o fa-lg"></i><span class="icon-label">Writings</span></h4>
+                <ul class="list-group" id="pages">
+                    {% for p in PAGES %}
+                        <li class="list-group-item">
+                            <a href="{{ SITEURL }}/{{ p.url }}">
+                                 {{ p.menulabel|default(p.title) }}
+                            </a>
+                        </li>
+                      {% endfor %}
+                </ul>
+            </li>
+        {% endif %}
+
         {% if DISPLAY_RECENT_POSTS_ON_SIDEBAR %}
             {% if RECENT_POST_COUNT is not defined %}
                 {% set RECENT_POST_COUNT = 5 %}
             {% endif %}
-            <li class="list-group-item"><h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Recent Posts</span></h4>
+            <li class="list-group-item"><h4><i class="fa fa-clock-o fa-lg"></i><span class="icon-label">Recent Posts</span></h4>
                 <ul class="list-group" id="recentposts">
                 {% for article in articles[:RECENT_POST_COUNT] %}
                     <li class="list-group-item">
@@ -97,6 +112,9 @@
             {% endif %}
         {% endif %}
 
+        {% if DISPLAY_ARCHIVES_ON_SIDEBAR %}
+        <li class="list-group-item"><a href="{{ SITEURL }}/{{ ARCHIVES_URL | default('archives.html') }}"><h4><i class="fa fa-archive fa-lg"></i><span class="icon-label">Archives</span></h4></a></li>
+        {% endif %}
         {% include 'includes/github.html' %}
         {% include 'includes/twitter_timeline.html' %}
         {% include 'includes/links.html' %}
