--- a/templates/includes/taglist.html
+++ b/templates/includes/taglist.html
@@ -1,9 +1,6 @@
 {% if article.tags %}
-<span class="label label-default">Tags</span>
+<span class="label label-default">tagged</span>
 {% for tag in article.tags %}
-	<a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>
-    {% if not loop.last %}
-        /
-    {% endif %}
+	<a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>{% if not loop.last %}, {% endif %}
 {% endfor %}
 {% endif %}
