--- a/templates/article.html
+++ b/templates/article.html
@@ -80,12 +80,10 @@
                 </h1>
             </header>
             <div class="entry-content">
-                <div class="panel">
-                    <div class="panel-body">
-                        {% include "includes/article_info.html" %}
-                    </div>
-                </div>
                 <div class="inner-content">{{ article.content }}</div>
+                <div class="well well-sm">
+                    {% include "includes/article_info.html" %}
+                </div>
             </div>
             <!-- /.entry-content -->
             {% include 'includes/related-posts.html' %}
