Fix minor html5 issues with ddg-search

--- a/templates/base.html
+++ b/templates/base.html
@@ -146,7 +146,7 @@
             {% endif %}
             </ul>
             {% if DISPLAY_DDG_SEARCH %}
-              {% include 'includes/ddg-search.html' %}</span>
+              {% include 'includes/ddg-search.html' %}
             {% endif %}
         </div>
         <!-- /.navbar-collapse -->
