--- a/templates/includes/ddg-search.html
+++ b/templates/includes/ddg-search.html
@@ -3,6 +3,5 @@
     <input name="sites" value="{{ SITEURL }}" type="hidden">
     <input id="search" type="text" class="form-control" placeholder="Search" name="q">
     <input value="Go" type="submit"
-           style="height: 0px; width: 0px; border: none; padding: 0px;"
-           hidefocus="true">
+           style="height: 0px; width: 0px; border: none; padding: 0px;">
 </form>
