--- a/templates/includes/ddg-search.html
+++ b/templates/includes/ddg-search.html
@@ -1,4 +1,4 @@
-<form method="get" action="https://duckduckgo.com/" class="navbar-form navbar-right">
+<form method="get" action="https://duckduckgo.com/" class="navbar-form">
     <input name="kh" value="1" type="hidden"><!-- use https -->
     <input name="sites" value="{{ SITEURL }}" type="hidden">
     <input id="search" type="text" class="form-control" placeholder="Search" name="q">
