--- a/static/css/style.css
+++ b/static/css/style.css
@@ -217,3 +217,18 @@ figure.floatcenter, .align-center {
         font-size: 16px;
     }
 }
+
+/* Insert space between the last MENUITEM and the search in the navbar. */
+.navbar-right > li:nth-last-child(2) {
+    margin-right: 15px;
+}
+
+/* Make the navbar search display neatly both open and collapsed. */
+.navbar-right > li:last-child {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+.navbar-right > li:last-child > .navbar-form {
+    padding-left: 0px;
+    padding-right: 0px;
+}
