Add support for onsite comments

--- a/templates/article.html
+++ b/templates/article.html
@@ -91,6 +91,7 @@
             {% include 'includes/addthis.html' %}
             {% include 'includes/shariff.html' %}
             {% include 'includes/comments.html' %}
+            {% include 'includes/onsite-comments.html' %}
         </article>
     </section>
 
