--- a/templates/base.html
+++ b/templates/base.html
@@ -147,7 +147,8 @@
             {% if 'tipue_search' in PLUGINS %}
               <li><span>
                 <form class="navbar-search" action="{{ SEARCH_URL | default('/search.html') }}">
-                  <input type="text" class="search-query" placeholder="Search" name="q" id="tipue_search_input" required>
+                  <input type="text" title="Search" class="search-query" placeholder="Search"
+                         name="q" id="tipue_search_input" required>
                 </form></span>
               </li>
             {% endif %}
