--- a/static/css/style.css
+++ b/static/css/style.css
@@ -94,12 +94,6 @@ a, a:hover {
     margin-bottom: 2px;
 }
 
-.summary img {
-    max-width: 100%;
-    height: auto;
-}
-
-
 .floatright, .align-right {
     float: right;
 }
@@ -232,3 +226,77 @@ figure.floatcenter, .align-center {
     padding-left: 0px;
     padding-right: 0px;
 }
+
+/* Sharing buttons */
+
+@font-face {
+    font-family: "icons";
+    src:url("../fonts/icons.eot?v=1");
+    src:url("../fonts/icons.eot?v=1#iefix") format("embedded-opentype"),
+        url("../fonts/icons.woff?v=1") format("woff"),
+        url("../fonts/icons.ttf?v=1") format("truetype"),
+        url("../fonts/icons.svg?v=1#icons") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
+
+/* Apply these base styles to all icons */
+footer [class^="icon-"]:before, footer [class*=" icon-"]:before {
+    font-family: "icons";
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    text-decoration: none !important;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+footer.post-info .share {
+    /*position: absolute;
+    top: 3rem;
+    right: 0;
+    width: 140px;*/
+    float: right;
+}
+
+footer.post-info .share a {
+    border-bottom: none;
+    color: #AFAFAF;
+    display: inline-block;
+    font-size: 1.8rem;
+    margin-bottom: -0.35em;
+    margin-left: 1rem;
+    text-decoration: none;
+    vertical-align: bottom;
+}
+
+footer.post-info .share .icon-twitter:hover {
+    color: #55acee;
+}
+footer.post-info .share .icon-facebook:hover {
+    color: #3b5998;
+}
+footer.post-info .share .icon-google-plus:hover {
+    color: #dd4b39;
+}
+footer.post-info .share .icon-linkedin:hover {
+    color: #0077b5;
+}
+
+.icon-twitter:before {
+    content: "\f602";
+    font-size: 1.1em;
+}
+.icon-google-plus:before {
+    content: "\f603";
+}
+.icon-facebook:before {
+    content: "\f604";
+}
+.icon-linkedin:before {
+    content: "\f60A";
+}
+
